# hvac-iot

./: README.md  flake.nix  shell.nix
.github/workflows/: Arduino_Sensor.yml  kicad.yml  pull_request.yml
.kibot/: preflight.yml
Hub/: Hub.ino
Sensor/: Sensor.ino
esp32-ble-sensor-mini/: #auto_saved_files#  150maPower.kicad_sch  USBC2.0.kicad_sch  _autosave-esp32-ble-sensor.kicad_sch  case.FCStd  esp32-ble-sensor.csv  esp32-ble-sensor.kicad_pcb  esp32-ble-sensor.kicad_prl  esp32-ble-sensor.kicad_pro  esp32-ble-sensor.kicad_sch  esp32-ble-sensor.kicad_sch-bak  fp-info-cache  fp-lib-table  models-esp32_h2_sensor_screenplate.3mf  models.20250624-154321.FCBak  models.FCStd  sht4x.kicad_sch  sym-lib-table  ~_autosave-esp32-ble-sensor.kicad_pcb.lck
esp32-ble-sensor-mini/Library.pretty/: SW_TS18-5-17-SL-260-SMT-TR.kicad_mod
esp32-ble-sensor-mini/bom/: ibom.html
esp32-ble-sensor-mini/esp32-ble-sensor-backups/: esp32-ble-sensor.csv
esp32c6-sensor/: Cargo.toml
esp32c6-sensor/.cargo/: config.toml
esp32h2-sensor/: Cargo.toml
esp32h2-sensor/.cargo/: config.toml
libraries/: 2025-03-18_15-24-35.kicad_sym  ATSAMD21G18A-AUT.lib  GCT_USB4215-03-A_REVA.kicad_mod  SW_TS18-5-17-SL-260-SMT-TR.kicad_mod  TS18-5-17-SL-260-SMT-TR.kicad_sym  TS18-5-17-SL-260-SMT-TR.step  USB4215-03-A_REVA.bak  USB4215-03-A_REVA.kicad_sym
libraries/LM66200DRLR/KiCADv6/: 2025-04-16_23-12-51.bak
libraries/footprints.pretty/: DQN0004A.kicad_mod
libraries/ul_EVP-AEBB2A/KiCAD/2022-01-10_19-37-02/: 2022-01-10_19-37-02.lib
libraries/ul_EVP-AEBB2A/KiCAD/2022-01-10_19-37-02/footprints.pretty/: EVP-AEBB2A.kicad_mod
libraries/ul_SS-52400-002/KiCAD/2022-01-09_12-55-39/: 2022-01-09_12-55-39.kicad_sym  2022-01-09_12-55-39.lib
libraries/ul_SS-52400-002/KiCAD/2022-01-09_12-55-39/footprints.pretty/: SS-52400-002.kicad_mod
thermostat/: 12BHC186P1-GR.kicad_sym  EVP-AEGE2A-W.bak  EVP-AEGE2A-W.kicad_sym  EVP-AEGE2A.kicad_sym  sym-lib-table  thermostat.kicad_pro  thermostat.kicad_sch
