[package]
edition = "2024"
name    = "esp32c6-sensor"
version = "0.1.0"

[[bin]]
name = "esp32c6-sensor"
path = "./src/bin/async_main.rs"

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.8.0" }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable"] }
esp-wifi = { version = "0.15.0", default-features = false, features = [
  "ble",
  "esp-alloc",
  "esp32c6",
  "builtin-scheduler",
  #"preempt-extern"
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
#bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
#  "async",
#  "macros",
#] }
smart-leds-trait  = "0.3.0"
critical-section = {version = "1.2.0", features = []}
embassy-executor = { version = "0.7.0", features = [] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6"] }
static_cell = { version = "2.1.0", features = [] }

smart-leds = "0.4.0"
esp-hal-smartled = { version = "0.15.0", git = "https://github.com/esp-rs/esp-hal-community", package = "esp-hal-smartled", ref = "955208442e848eb4ff77316fc21488348d1bb1d0"}
sht4x-ng = { version = "0.2.2", features = ["async"] }
bt-hci = "0.3.2"
trouble-host = "0.2.4"
embassy-sync = "0.7.0"
embassy-futures = "0.1.1"
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
defmt = "1.0.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
scd4x = { version = "0.4.1", features = ["embedded-hal-async", "scd41"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-embedded-hal = "0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
