[package]
edition = "2021"
name    = "esp32h2-sensor"
version = "0.1.0"

[[bin]]
name = "esp32h2-sensor"
path = "./src/bin/async_main.rs"

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32h2",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32h2", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32h2", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "ble",
  "esp-alloc",
  "esp32h2",
  "log",
  "utils",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
smart-leds-trait  = "0.3.0"
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32h2"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

smart-leds = "0.4.0"
esp-hal-smartled = { git="https://github.com/esp-rs/esp-hal-community.git", version = "0.14.0", features = ["esp32h2"], ref = "ad75112" }
sht4x = "0.1.0"
sht4x-ng = { version = "0.2.2", features = ["async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
